--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,6 @@ body {
 
 /* Main */
 
-.container {
-}
-
 .content {
     background-color: #fff;
     padding: 50px 50px 0px 50px;
@@ -48,6 +45,11 @@ body {
     padding: 10px;
     border-radius: 50px;
     border-color: #505253;
+    transition: transform 0.3s;
+}
+
+.content-logo:hover {
+    transform: scale(1.1);
 }
 
 .main-content-hero {
